--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,7 @@
         {% endif %}
       {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/melvinperera.github.io/blob/master/Resume(Nov_21_2017).pdf">Résumé</a>
+      <a class="sidebar-nav-item" href="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/melvinperera/melvinperera.github.io/8471e502028d45623919840b08844b7ec4ea0c32/Resume(Nov_21_2017).pdf">Résumé</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
