--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,7 @@
       {% endfor %}
 
       <a class="sidebar-nav-item" href="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/melvinperera/melvinperera.github.io/8471e502028d45623919840b08844b7ec4ea0c32/Resume(Nov_21_2017).pdf">Résumé</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub Repo</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
